<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nord_bg"
    tools:context=".MainActivity">

    <!-- Display for Input -->
    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/margin_sixteen"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/padding_sixteen"
        android:background="@drawable/edit_text_stylized"
        android:gravity="end|center_vertical"
        android:textSize="36sp"
        android:textColor="@color/nord_fg"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:elevation="4dp"
        android:shadowColor="@color/nord_shadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:layout_alignParentTop="true"/>


    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/margin_eight">

        <!-- Row 1: Special Functions -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button android:id="@+id/button_del" android:text="@string/button_del" style="@style/NordButtonSecondary" android:onClick="operationFn"/>
            <Button android:id="@+id/button_power" android:text="@string/button_power" style="@style/NordButtonSecondary" android:onClick="operationFn"/>
            <Button android:id="@+id/button_percentage" android:text="@string/button_percentage" style="@style/NordButtonSecondary" android:onClick="operationFn"/>
            <Button android:id="@+id/button_clr" android:text="@string/button_clr" style="@style/NordButtonAccent" android:onClick="operationFn"/>
        </LinearLayout>

        <!-- Row 2: Numbers and Operators -->
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button android:id="@+id/button_seven" android:text="@string/button_seven" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_eight" android:text="@string/button_eight" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_nine" android:text="@string/button_nine" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_divide" android:text="@string/button_divide" style="@style/NordButtonAccent" android:onClick="operationFn"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button android:id="@+id/button_four" android:text="@string/button_four" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_five" android:text="@string/button_five" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_six" android:text="@string/button_six" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_multiply" android:text="@string/button_multiply" style="@style/NordButtonAccent" android:onClick="operationFn"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button android:id="@+id/button_one" android:text="@string/button_one" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_two" android:text="@string/button_two" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_three" android:text="@string/button_three" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_subtract" android:text="@string/button_subtract" style="@style/NordButtonAccent" android:onClick="operationFn"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button android:id="@+id/button_zero" android:text="@string/button_zero" style="@style/NordButton"  android:onClick="operationFn"/>
            <Button android:id="@+id/button_dot" android:text="@string/button_dot" style="@style/NordButton" android:onClick="operationFn"/>
            <Button android:id="@+id/button_equal" android:text="@string/button_equal" style="@style/NordButtonAccent" android:onClick="operationFn"/>
            <Button android:id="@+id/button_add" android:text="@string/button_add" style="@style/NordButtonAccent" android:onClick="operationFn"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
